Canceling pose library preview does not reset to previous pose #41088

Closed
opened 2014-07-15 21:59:17 +02:00 by Maik Schreiber · 7 comments

System Information
Windows 7 64-bit, nVidia GeForce GTX 660 Ti

Blender Version
Broken: 2.71 (date: 2014-06-25 18:36, hash: 9337574)

Exact steps for others to reproduce the error

  • Add a pose library with some poses to an armature.
  • Enter pose mode.
  • Press Ctrl+L to preview the poses of the pose library.
  • Select any pose other than the one the armature previously had.
  • Cancel browsing by pressing Escape or clicking the right mouse button.
  • Now the UI shows the last pose from the browse, which is not the one the object currently has.
  • Refresh the UI by moving the view camera using the middle mouse button. The object's pose instantly refreshes to the real (previous) pose.
**System Information** Windows 7 64-bit, nVidia GeForce GTX 660 Ti **Blender Version** Broken: 2.71 (date: 2014-06-25 18:36, hash: 9337574) **Exact steps for others to reproduce the error** - Add a pose library with some poses to an armature. - Enter pose mode. - Press Ctrl+L to preview the poses of the pose library. - Select any pose other than the one the armature previously had. - Cancel browsing by pressing Escape or clicking the right mouse button. - Now the UI shows the last pose from the browse, which is not the one the object currently has. - Refresh the UI by moving the view camera using the middle mouse button. The object's pose instantly refreshes to the real (previous) pose.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @blizzy

Added subscriber: @blizzy
Author

This seems to work correctly in Rendered mode, but not in Bounding Box, Wireframe, Solid, Texture, and Material modes.

This seems to work correctly in Rendered mode, but not in Bounding Box, Wireframe, Solid, Texture, and Material modes.
Bastien Montagne self-assigned this 2014-07-16 00:19:01 +02:00

Will have a look at that, most likely a missing update tag…

Will have a look at that, most likely a missing update tag…

This issue was referenced by 0fd194c2cb

This issue was referenced by 0fd194c2cb7d679d2c4c6c4f1366cdedf84c1f77

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0fd194c2cb.

Closed by commit 0fd194c2cb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41088
No description provided.