Fix T41088: Canceling pose library preview does not reset to previous pose.